--- a/Projet-RSS/templates/table.html
+++ b/Projet-RSS/templates/table.html
@@ -3,28 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Tableau des données</title>
-    <link rel="stylesheet" href="/Users/antoinesusini/Desktop/Projet-RSS/static/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <table>
-        <thead>
-            <tr>
-                <th>Titre</th>
-                <th>Date de publication</th>
-                <th>Lien</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for row in data %}
+    <div class="container">
+        <h1>Tableau des données</h1>
+        <table>
+            <thead>
                 <tr>
-                    <td>{{ row.title }}</td>
-                    <td>{{ row.pubdate }}</td>
-                    <td><a href="{{ row.link }}" target="_blank">{{ row.link }}</a></td>
-                    <td>{{ row.description }}</td>
+                    <th>Titre</th>
+                    <th>Date de publication</th>
+                    <th>Lien</th>
+                    <th>Description</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for row in data %}
+                    <tr>
+                        <td>{{ row.title }}</td>
+                        <td>{{ row.pubdate }}</td>
+                        <td><a href="{{ row.link }}" target="_blank">{{ row.link }}</a></td>
+                        <td>{{ row.description }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
