--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,40 @@
+/* Style de base */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #F5F5F5;
+}
+
+/* Style des titres */
+h1 {
+    color: #333;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    text-align: center; /* Ajout de l'alignement au centre */
+}
+
+h2, h3, h4, h5, h6 {
+    color: #333;
+    margin-top: 30px;
+    margin-bottom: 15px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+/* Style des liens */
+a {
+    color: #1e90ff; /* Changement de la couleur des liens */
+    text-decoration: none;
+}
+
+a:hover {
+    color: #003399;
+}
+
+/* Style de la table */
 table {
     font-family: Arial, sans-serif;
     border-collapse: collapse;
@@ -21,13 +58,4 @@ tr:nth-child(even) {
 
 tr:hover {
     background-color: #ddd;
-}
-
-a {
-    text-decoration: none;
-    color: #1e90ff;
-}
-
-a:hover {
-    color: #003399;
 }
