--- a/templates/table.html
+++ b/templates/table.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="text-align:center;">RSS feed</h1>
-        <h3>RSS (Really Simple Syndication) is a data format used to publish frequently updated content, such as blog posts, news, events, videos, etc. It allows websites and users to easily subscribe to this content to read it on another site or in an RSS reader. It allows websites and users to easily subscribe to this content to read it on another site or in an RSS reader. The RSS feed is usually available as an XML file that contains information about the content, such as the title, description, publication date, author and a link to the full article. Users can subscribe to an RSS feed using an RSS feed aggregator that regularly retrieves the latest updates from the feed and displays them in a user-friendly interface.</h3>
-        <hr>
+        <h1 style="text-align:center;">Flux RSS</h1>
+        <h3>Le flux RSS (Really Simple Syndication) est un format de données utilisé pour publier du contenu mis à jour fréquemment, comme des articles de blog, des nouvelles, des événements, des vidéos, etc. Il permet à des sites web et à des utilisateurs de s'abonner facilement à ce contenu pour le lire sur un autre site ou dans un lecteur de flux RSS.</h3>
+        <h3>Le flux RSS est généralement disponible sous forme d'un fichier XML qui contient des informations sur le contenu, telles que le titre, la description, la date de publication et un lien vers l'article complet. Les utilisateurs peuvent s'abonner à un flux RSS en utilisant un agrégateur de flux RSS qui récupère régulièrement les dernières mises à jour du flux et les affiches dans une interface conviviale.</h3>
         <table class="table-striped">
             <!-- En-tête de la table -->
             <thead>
